force-app/main/default/objects/Exchange_Rate__c/fields/Currency_Name__c.field-meta.xml
<CustomField>
    <fullName>Currency_Name__c</fullName>
    <label>Currency Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>