force-app/main/default/objects/Exchange_Rate__c/fields/Symbol__c.field-meta.xml
<CustomField>
    <fullName>Symbol__c</fullName>
    <label>Symbol</label>
    <length>5</length>
    <type>Text</type>
</CustomField>