force-app/main/default/objects/Exchange_Rate__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Currency_Name__c</columns>
    <columns>Rate_to_USD__c</columns>
    <columns>CURRENCY_ISO_CODE</columns>
    <columns>LAST_UPDATE</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>